# bayleaf

./: .gitignore  AGENTS.md  COURSES-PLAN.md  IA-PLAN.md  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bayleaf-api.yml  bayleaf-chat.yml  config.yml
api/: .dev.vars.example  AGENTS.md  README.md  RETENTION.md  TESTING.md  package-lock.json  package.json  wrangler.jsonc
api/migrations/: 0003_add_vertex_rpd.sql  0004_add_bedrock_rpd.sql
api/scripts/: bump-limit.mjs
api/src/: constants.ts  daytona.ts  index.ts  openrouter.ts  schemas.ts  types.ts  web.ts
api/src/routes/: auth.ts  auth.tsx  claim.tsx  dashboard.ts  dashboard.tsx  docs.ts  key.ts  llms.ts  proxy.ts  sandbox.ts  web.ts  wellknown.ts
api/src/utils/: ip.ts  (+3 more)
chat/: AGENTS.md  DESIGN.md  Dockerfile.retention  RETENTION.md  _backup.py  measure_first_token.py  retention_cleanup.py
chat/skills/: web-search.md
courses/: .dev.vars.example  DESIGN.md  package-lock.json  package.json  wrangler.jsonc
courses/migrations/: 0001_create_tables.sql  0002_add_claim_email.sql
courses/src/: constants.ts  index.ts  index.tsx  middleware.ts  types.ts
docs/: CNAME  index.html  privacy.html  style.css  support.html  use-cases.html
docs/images/: make-og-card.py
lti/: .dockerignore  .env.example  .gitignore  AGENTS.md  DECISIONS.md  Dockerfile  README.md  pyproject.toml
lti/.do/: app.yaml
lti/src/connector/: main.py
politics/: ACCOUNTS.md  BRIEF.md  COMPARISON.md  DEPENDENCIES.md  FERPA.md  HECVAT.md  POSITION.md  README.md  RESEARCH.md  SECURITY.md  VPAT-api.md  VPAT-overview.md  VPAT-pages.md  VPAT.md
(+79 files in other folders)
